// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should match snapshot when providing all fields: errors 1`] = `[]`;

exports[`should match snapshot when providing all fields: output 1`] = `
MilestoneEntity {
  "closedAt": "2022-08-30T09:55:46Z",
  "closedIssuesCount": 2,
  "createdAt": "2022-08-18T09:55:46Z",
  "description": "Adding an Arabic version of  dzcode.io",
  "dueAt": "2022-08-30T09:55:46Z",
  "id": "8320713",
  "openIssuesCount": 4,
  "status": "open",
  "title": "Localization (web)",
  "url": "https://github.com/dzcode-io/dzcode.io/milestone/9",
}
`;

exports[`should match snapshot when providing required fields only: errors 1`] = `[]`;

exports[`should match snapshot when providing required fields only: output 1`] = `
MilestoneEntity {
  "closedIssuesCount": 2,
  "createdAt": "2022-08-18T09:55:46Z",
  "description": "Adding an Arabic version of  dzcode.io",
  "id": "8320713",
  "openIssuesCount": 4,
  "status": "open",
  "title": "Localization (web)",
  "url": "https://github.com/dzcode-io/dzcode.io/milestone/9",
}
`;

exports[`should show an error that matches snapshot when passing empty object: errors 1`] = `
[
  ValidationError {
    "children": [],
    "constraints": {
      "isString": "id must be a string",
    },
    "property": "id",
    "target": MilestoneEntity {},
    "value": undefined,
  },
  ValidationError {
    "children": [],
    "constraints": {
      "isString": "title must be a string",
    },
    "property": "title",
    "target": MilestoneEntity {},
    "value": undefined,
  },
  ValidationError {
    "children": [],
    "constraints": {
      "isString": "description must be a string",
    },
    "property": "description",
    "target": MilestoneEntity {},
    "value": undefined,
  },
  ValidationError {
    "children": [],
    "constraints": {
      "isUrl": "url must be an URL address",
    },
    "property": "url",
    "target": MilestoneEntity {},
    "value": undefined,
  },
  ValidationError {
    "children": [],
    "constraints": {
      "isNumber": "openIssuesCount must be a number conforming to the specified constraints",
    },
    "property": "openIssuesCount",
    "target": MilestoneEntity {},
    "value": undefined,
  },
  ValidationError {
    "children": [],
    "constraints": {
      "isNumber": "closedIssuesCount must be a number conforming to the specified constraints",
    },
    "property": "closedIssuesCount",
    "target": MilestoneEntity {},
    "value": undefined,
  },
  ValidationError {
    "children": [],
    "constraints": {
      "isString": "status must be a string",
    },
    "property": "status",
    "target": MilestoneEntity {},
    "value": undefined,
  },
  ValidationError {
    "children": [],
    "constraints": {
      "isDateString": "createdAt must be a valid ISO 8601 date string",
    },
    "property": "createdAt",
    "target": MilestoneEntity {},
    "value": undefined,
  },
]
`;

exports[`should show an error that matches snapshot when passing empty object: output 1`] = `MilestoneEntity {}`;
